[M132] Fix cropped URL in Workspace settings
This allows for a variable URL height and now correctly breaks the
word on overflow.

Drive-by: add more space between URL header and actual URL

Before: https://i.imgur.com/hXjCjt2.png
After: https://i.imgur.com/rhHK6Zg.png
Fixed: 379823957
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6034942
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit 4b84e8b51b2d66dd51f085829bc86fb2fc4db6cf)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6042143
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/models/persistence/editFileSystemView.css
+++ b/front_end/models/persistence/editFileSystemView.css
@@ -7,14 +7,17 @@
 .excluded-folder-header {
   display: flex;
   flex-direction: column;
-  height: var(--sys-size-16);
+  min-height: var(--sys-size-16);
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
   padding: var(--sys-size-5) var(--sys-size-6);
 
+  & > .url-header {
+    height: var(--sys-size-9);
+  }
+
   & > .excluded-folder-url {
     color: var(--sys-color-on-surface-subtle);
-    overflow: hidden;
-    text-overflow: ellipsis;
+    overflow-wrap: break-word;
   }
 }
 
